syntax = "proto3";

package carelink.notification;

option java_multiple_files = true;
option java_package = "com.carelink.grpc.notification";
option java_outer_classname = "NotificationProto";

// Service for sending simple notifications to users
service NotificationService {

  rpc CreateNotification (NotificationRequest) returns (NotificationResponse);
  rpc GetNotification (NotificationIdRequest) returns (NotificationResponse);
  rpc GetUserNotifications (UserNotificationsRequest) returns (NotificationListResponse);
  rpc MarkAsRead (NotificationIdRequest) returns (NotificationResponse);
  rpc DeleteNotification (NotificationIdRequest) returns (Empty);
}

message NotificationRequest {
  int32 userId = 1;
  string notificationType = 2;
  string message = 3;
  string userEmail = 4;
  string userPhone = 5;
}

message NotificationResponse {
  int32 notificationId = 1;
  int32 userId = 2;
  string notificationType = 3;
  string message = 4;
  bool isRead = 5;
  string createdAt = 6;
}

message NotificationIdRequest {
  int32 notificationId = 1;
}

message UserNotificationsRequest {
  int32 userId = 1;
  bool isRead = 2;
}

message NotificationListResponse {
  repeated NotificationResponse notifications = 1;
}

message Empty {}
